# chasm

./: CONTRIBUTING.md  README.md  package-lock.json  package.json
.github/workflows/: bump-version.yml  release.yml
docs/: ARCHITECTURE.md  DATA_SOURCES.md  DECISIONS.md  FEATURES.md  RELEASE.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: copilot_cli.rs  mod.rs  vscode_copilot.rs
src/lib/components/: ContextMenu.svelte  CustomSetupSelector.svelte  FilterPanel.svelte  GroupContextMenu.svelte  GroupDetail.svelte  SessionCard.svelte  SessionDetail.svelte  SessionList.svelte  SettingsPanel.svelte  SourceBadge.svelte  SourceFilter.svelte  Toolbar.svelte  ViewSelector.svelte
src/lib/stores/: customSetups.ts  sessions.ts  settings.ts
src/lib/types/: session.ts
src/lib/utils/: format.ts  search.test.ts  search.ts
src/routes/: +page.svelte
