[package]
name = "chasm"
version = "1.0.1"
description = "chasm - centralised hub for agent session management"
authors = ["aloiva"]
edition = "2021"

[lib]
name = "chasm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "7"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["fs", "process"] }
glob = "0.3"

